--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "13.4.12",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.27",
+    "rc-checkbox": "^3.1.0",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-dom": "18.2.0",
