--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.2",
     "react-shimmer-effect": "^1.0.9",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.4",
     "swiper": "^9.4.1",
